Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.0.24, 5.5, 10.1
-
Component/s: Scripts & Clients
-
Labels:None
-
Environment:MariaDB git as of f8adeccd78bff80725a95b73447e34a5f4528179, TERM=asdf
Description
The mysql client will exit if 'setupterm()' fails, e.g. if the 'TERM' environment variable is not recognized by curses.
To reproduce, use TERM=asdf mysql on a client binary built with curses support (the default).
The client will quit with:
'asdf': unknown terminal type.
The attached patch will fallback to the non-curses path if setupterm() fails.