MDEV-9885 Client doesn't start if 'TERM' unknown

1. don't exit if setupterm() failed
2. don't use vidattr() if setupterm() failed